# Geometry

./: .gitignore  CHECKLIST.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.codex/: config.toml  source_coverage_audit.json
A Mathematical Introduction to Robotic Manipulation/: 00-book-index.ipynb  AGENTS.md
A-Course-in-Metric-Geometry/: 00-book-index.ipynb  AGENTS.md  source_map.json
A-Mathematical-Introduction-to-Robotic-Manipulation/: AGENTS.md
Algebraic-Geometry/: 00-book-index.ipynb  AGENTS.md
Algebraic-Topology/: 00-book-index.ipynb  AGENTS.md  source_map.json
An-Introduction-to-Contact-Topology/: 00-book-index.ipynb  AGENTS.md
An-Introduction-to-Manifolds/: 00-book-index.ipynb  AGENTS.md  source_map.json
Basic-Topology/: 00-book-index.ipynb  AGENTS.md
Complex-Geometry-An-Introduction/: 00-book-index.ipynb  AGENTS.md
Computational Geometry Algorithms and Applications/: 00-book-index.ipynb
Computational-Geometry-Algorithms-and-Applications/: AGENTS.md
Computational-Geometry-in-C/: 00-book-index.ipynb  AGENTS.md  source_map.json
Computational-Topology-An-Introduction/: 00-book-index.ipynb  AGENTS.md
Convex-Analysis/: 00-book-index.ipynb  AGENTS.md
Differential-Forms-in-Algebraic-Topology/: 00-book-index.ipynb  AGENTS.md  source_map.json
Differential-Geometry-From-Elastic-Curves-to-Willmore-Surfaces/: 00-book-index.ipynb  AGENTS.md
Differential-Geometry-Lie-Groups-and-Symmetric-Spaces/: 00-book-index.ipynb  AGENTS.md  source_map.json
Differential-Geometry-of-Curves-and-Surfaces/: 00-book-index.ipynb  AGENTS.md
Differential-Topology/: 00-book-index.ipynb  AGENTS.md  source_map.json
Directional Statistics/: AGENTS.md
Directional-Statistics/: 00-book-index.ipynb  AGENTS.md
Discrete-and-Computational-Geometry/: 00-book-index.ipynb  AGENTS.md  source_map.json
Einstein-Manifolds/: 00-book-index.ipynb  AGENTS.md  source_map.json
Elementary-Differential-Geometry-Andrew-Pressley/: 00-book-index.ipynb  AGENTS.md
Elementary-Differential-Geometry-Barrett-ONeill/: 00-book-index.ipynb  AGENTS.md
Euclid-and-Beyond/: 00-book-index.ipynb  AGENTS.md
Euclidean-and-Non-Euclidean-Geometries/: 00-book-index.ipynb  AGENTS.md
Foundations-of-Differentiable-Manifolds-and-Lie-Groups/: 00-book-index.ipynb  AGENTS.md  source_map.json
Foundations-of-Differential-Geometry/: 00-book-index.ipynb  AGENTS.md  source_map.json
Fundamentals of Computer Graphics/: 00-book-index.ipynb  AGENTS.md
Fundamentals-of-Computer-Graphics/: AGENTS.md
Geometric Tools for Computer Graphics/: 00-book-index.ipynb
Geometric-Algebra-for-Computer-Science/: 00-book-index.ipynb  AGENTS.md
Geometric-Deep-Learning/: 00-book-index.ipynb  AGENTS.md
Geometric-Group-Theory-An-Introduction/: 00-book-index.ipynb  AGENTS.md  source-map.json
Geometric-Measure-Theory/: 00-book-index.ipynb  AGENTS.md
Geometric-Tools-for-Computer-Graphics/: 00-book-index.ipynb  AGENTS.md
Geometry-A-Metric-Approach-with-Models/: 00-book-index.ipynb  AGENTS.md
Geometry-I/: 00-book-index.ipynb  AGENTS.md
Geometry-II/: 00-book-index.ipynb  AGENTS.md
Geometry-with-an-Introduction-to-Cosmic-Topology/: 00-book-index.ipynb  AGENTS.md
Hodge-Theory-and-Complex-Algebraic-Geometry/: 00-book-index.ipynb  AGENTS.md
Ideals, Varieties, and Algorithms An Introduction to Computational Algebraic Geometry and Commutative Algebra/: AGENTS.md
Information-Geometry-and-Its-Applications/: 00-book-index.ipynb  AGENTS.md
Introduction-to-Geometry/: AGENTS.md  (+1 more)
(+8713 files in other folders)
