[project]
name = "geometry-lab"
version = "0.1.0"
description = "A uv-managed Python 3.13 notebook lab for geometry, visualization, simulation, CV, GIS, and artifact-first study workflows."
requires-python = ">=3.13,<3.14"
dependencies = [
    "contextily",
    "ezdxf",
    "fiona",
    "folium",
    "geomloss",
    "geomstats",
    "geopandas",
    "gpytoolbox",
    "h5py",
    "imageio",
    "imageio-ffmpeg",
    "ipykernel",
    "ipympl",
    "ipywidgets",
    "jupyter-server-proxy",
    "jupyterlab",
    "jupytext",
    "kaleido",
    "kornia",
    "manifold3d",
    "mapbox-earcut",
    "matplotlib",
    "meshio",
    "nbclient",
    "nbconvert",
    "nbformat",
    "nbstripout",
    "networkx",
    "numpy",
    "opencv-contrib-python",
    "osmnx",
    "pandas",
    "pillow",
    "plotly",
    "polars",
    "pooch",
    "pot",
    "potpourri3d",
    "pyarrow",
    "pycolmap",
    "pydeck",
    "pyogrio",
    "pyproj",
    "pyriemann",
    "pyvista",
    "rasterio",
    "rich",
    "robust-laplacian",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "seaborn",
    "shapely",
    "statsmodels",
    "sympy",
    "taichi",
    "torch",
    "torchvision",
    "tqdm",
    "trame",
    "trame-vtk",
    "trame-vuetify",
    "trimesh",
    "xarray",
    "xatlas",
    "zarr",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
package = false

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["Geometric-Algebra-for-Computer-Science/scripts"]
python_files = ["smoke_*.py", "test_*.py"]
